errors van GUI gefixd